tests/00-syntax/02-builtin-dialect-ref-examples/07-FloatAttr-5.mlir
// RUN: not krun -d %kdir %s 2>&1 | FileCheck %s

42 : f32     // Error: expected integer type
// CHECK: {{.*}}error: unexpected token
